[package]
name = "huk"
version = "0.1.0"
edition = "2024"
authors = ["Nicholas Berlette <nick@berlette.com>"]
description = "Lightweight utility for integrating git hooks with the scripts/tasks from your project's package.json/deno.json file."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nberlette/huk"
homepage = "https://huk.berlette.com"
keywords = ["git", "hooks", "automation", "cli", "javascript"]
categories = [
  "command-line-utilities",
  "development-tools::version-control",
  "development-tools::build-tools",
]

[lib]
name       = "huk"
path       = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "huk"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc", "alloc"] }
serde_json = { version = "1.0", features = [
  "preserve_order",
  "alloc",
  "raw_value",
] }
serde_yaml = { version = "0.9", package = "serde_yaml_ok" }
clap = { version = "4.4", features = ["derive"] }
thiserror = "2.0"
regex = "1.12"
which = "8.0"
crossterm = "0.29"
ratatui = { version = "0.29", features = [
  "crossterm",
  "serde",
  "all-widgets",
  "scrolling-regions",
  "palette",
] }
directories = "6.0"
lazy_static = "1.4"

[dev-dependencies]
tempfile   = "3.23"
assert_cmd = "2.0"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
