[package]
name = "huk"
version = "0.1.0"
edition = "2024"
authors = ["Nicholas Berlette <nick@berlette.com>"]
description = "Integrated git hooks with package.json and deno.json tasks."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nberlette/huk"
homepage = "https://github.com/nberlette/huk"
keywords = ["git", "tui", "automation", "cli", "javascript"]
categories = [
  "command-line-utilities",
  "development-tools::version-control",
  "development-tools::build-tools",
]

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "huk"

[features]
default = ["tui"]
cargo_toml_config = []
custom_config = []
tui = ["ratatui", "crossterm", "chrono"]
ratatui = ["dep:ratatui"]
crossterm = ["dep:crossterm"]
chrono = ["dep:chrono"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc", "alloc"] }
serde_json = { version = "1.0", features = [
  "preserve_order",
  "alloc",
  "raw_value",
] }
serde_yaml = { version = "0.9", package = "serde_yaml_ok" }
clap = { version = "4.4", features = ["derive"] }
thiserror = "2.0"
regex = "1.12"
which = "8.0"
crossterm = { version = "0.29", features = [], optional = true }
ratatui = { version = "0.29", features = [
  "crossterm",
  "serde",
  "all-widgets",
  "scrolling-regions",
  "palette",
], optional = true }
directories = "6.0"
lazy_static = "1.4"
derive_more = { version = "2.1", features = [
  "display",
  "debug",
  "constructor",
  "is_variant",
  "as_ref",
  "deref",
  "deref_mut",
  "from",
  "into",
  "try_from",
  "try_into",
  "unwrap",
  "try_unwrap",
  "from_str",
  "into_iterator",
  "index",
  "index_mut",
] }
moos = "0.1.0"
toml = { version = "0.9.8", features = ["preserve_order"] }
paste = { version = "0.2.0", package = "pastey" }
chrono = { version = "0.4.42", optional = true }

[dev-dependencies]
tempfile = "3.23"
assert_cmd = "2.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
